edited formatting on answersheet

--- a/Lab 1 Answer Sheet.tex
+++ b/Lab 1 Answer Sheet.tex
@@ -100,6 +100,11 @@ You can complete this lab in a group of two. Please provide the name and student
       \[
       \sum_{d=1}^D x_d \ln(p_d) \underset{y=0}{\overset{y=1}{\gtrless}} \sum_{d=1}^D x_d \ln(q_d)
       \]
+      \vspace{0.1cm}
+      \hrule width 3cm % Small line to separate the note
+      \vspace{0.1cm}
+      
+      \footnotesize \textbf{Note:} The prior terms $\ln(\pi)$ and $\ln(1-\pi)$ were removed because $\pi = 0.5$, so $\ln(\pi) = \ln(1-\pi)$ cancel out.
       
       \vspace{0.2cm}
     \end{minipage}
