edited lab sheet

--- a/Lab 1 Answer Sheet.tex
+++ b/Lab 1 Answer Sheet.tex
@@ -111,7 +111,7 @@ You can complete this lab in a group of two. Please provide the name and student
   }
 \end{center}
 
-    \item Complete function \textsf{classify\_new\_email} in \textsf{classifier.py}, and test the classifier on the testing set. The number of Type $1$ errors is \framebox{\vbox{\vspace{3mm}\hbox to 10mm {}}}, and the number of Type $2$ errors is \framebox{\vbox{\vspace{3mm}\hbox to 10mm {}}}. ({\bf $1$ pt})
+    \item Complete function \textsf{classify\_new\_email} in \textsf{classifier.py}, and test the classifier on the testing set. The number of Type $1$ errors is \framebox{\vbox{\vspace{3mm}\hbox to 10mm {\hfill 2 \hfill}}}, and the number of Type $2$ errors is \framebox{\vbox{\vspace{3mm}\hbox to 10mm {\hfill 5 \hfill}}}.
 
     \item Write down the modified decision rule in the classifier such that
 	these two types of error can be traded off. Please introduce a new parameter to achieve such a trade-off.   ({\bf $0.5$ pt})
