--- a/Lab 1 Answer Sheet.tex
+++ b/Lab 1 Answer Sheet.tex
@@ -116,12 +116,25 @@ You can complete this lab in a group of two. Please provide the name and student
     \item Write down the modified decision rule in the classifier such that
 	these two types of error can be traded off. Please introduce a new parameter to achieve such a trade-off.   ({\bf $0.5$ pt})
     \begin{center}
-   \framebox{
-      \vbox{\vspace{35mm}
-    \hbox to 5.5in {}
-      \vspace{5.5mm}}
-   }
-   \end{center}
+  \framebox{
+    \begin{minipage}{5.5in}
+      \vspace{0.2cm}
+      We introduce a threshold parameter $\tau$ to bias the decision towards one class. The modified decision rule is: Decide $y=1$ (Spam) if:
+      
+      \[
+      \ln P(\mathbf{x}|y=1) + \ln P(y=1) > \ln P(\mathbf{x}|y=0) + \ln P(y=0) + \tau
+      \]
+      
+      \noindent Otherwise, decide $y=0$ (Ham).
+      
+      \begin{itemize}
+          \item Increasing $\tau$ makes it harder to classify as Spam, decreasing Type 2 errors (False Positives) but increasing Type 1 errors.
+          \item Decreasing $\tau$ makes it easier to classify as Spam, decreasing Type 1 errors (False Negatives) but increasing Type 2 errors.
+      \end{itemize}
+      \vspace{0.1cm}
+    \end{minipage}
+  }
+\end{center}
 
     Write your code in file \textsf{classifier.py} to implement your modified decision rule. Test it on the testing set and plot a figure to show the trade-off between Type $1$ error and Type $2$ error. In the figure, the {\it x}-axis should be the number of Type
 		$1$ errors and the {\it y}-axis should be the number of Type $2$
